# hinoki

./: Cargo.toml
crates/hinoki-ast/: Cargo.toml
crates/hinoki-ast/src/: lib.rs
crates/hinoki-parser/: Cargo.toml
crates/hinoki-parser/src/: format_rules.rs  hinoki.pest  lib.rs
crates/hinoki-parser/testdata/output/: hinoki_parser__test__enums.snap  hinoki_parser__test__fn_locality.snap  hinoki_parser__test__fn_multi_parameter.snap  hinoki_parser__test__fn_parameter.snap  hinoki_parser__test__fn_pub.snap  hinoki_parser__test__fn_pub_locality.snap  hinoki_parser__test__fn_simple.snap  hinoki_parser__test__functions.snap  hinoki_parser__test__impl_blocks.snap  hinoki_parser__test__imports.snap  hinoki_parser__test__structs.snap  hinoki_parser__test__traits.snap  hinoki_parser__test__variables.snap  hinoki_parser__test__vars_declaration.snap  hinoki_parser__test__vars_locality.snap  hinoki_parser__test__vars_multi_modal.snap  hinoki_parser__test__vars_mutable.snap
crates/hinoki-parser/testdata/output/asts/: hinoki_parser__test__fn_ast.snap
crates/hinoki-parser/testdata/snapshots/: enums.hi  fn_locality.hi  fn_multi_parameter.hi  fn_parameter.hi  fn_pub.hi  fn_pub_locality.hi  fn_simple.hi  functions.hi  impl_blocks.hi  imports.hi  structs.hi  traits.hi  variables.hi  vars_declaration.hi  vars_locality.hi  vars_multi_modal.hi  vars_mutable.hi
crates/snap_builder/: Cargo.toml  build.rs
crates/snap_builder/src/: lib.rs
