[package]
name = "hinoki-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.18.0"
pest = "2.7.3"
pest_derive = "2.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
snap_builder = { path = "../snap_builder" }
hinoki-ast = { path = "../hinoki-ast" }
thiserror = "1.0.48"

[dev-dependencies]
insta = { version = "1.31.0", features = ["glob"] }
